fixed readabilty issue
fixed issue wher date would not be read under bright bg.
darkened glass panels and increase opacity

--- a/style.css
+++ b/style.css
@@ -30,8 +30,9 @@ body{
 	padding:12px;
 }
 .card {
-	background: rgba(255,255,255,0.1);
-	backdrop-filter: blur(12px) saturate(150%);
+	background: rgba(55,55,55,0.32);
+	/*background: rgba(255,255,255,0.1); */
+	backdrop-filter: blur(12px) saturate(100%);
 	-webkit-backdrop-filter: blur(11px);
 	border:1px solid rgba(255, 255, 255, 0.3);
 	border-radius: 24px;
